--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Jackie Ege - Learn how to ride</title>
+        <title>Jackie Ege - Learn to ride</title>
+        <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -35,7 +36,7 @@
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image--><img class="masthead-avatar-mine mb-5 rounded" src="assets/img/title.jpg" alt="Jackie Ege">
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading mb-0">Learn how to ride, </h1>
+                <h1 class="masthead-heading mb-0">Learn to ride, </h1>
                 <h1 class="masthead-heading mb-0"> or learn to ride better</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
@@ -47,7 +48,7 @@
                 <p class="masthead-subheading font-weight-light mb-0">
                     If you have a horse, a place to ride and are looking to grow your equine relationship this might be for you.
                     Want to ride smarter, not harder? Are you looking for a better connection with your horse?
-                    Maybe I can help. English balanced riding lessons based on good biomechanics. 
+                    Let me help. English balanced riding lessons based on good biomechanics. 
                     You can be a Western rider or an English rider, it's all horse to me.
                     Feel secure while you ride, and do so effortlessly.</p>
             </div>
@@ -99,7 +100,7 @@
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><h1>My other horses</h1></div>
+                                <div class="portfolio-item-caption-content text-center text-white"><h1>My Horses</h1></div>
                             </div><img class="img-fluid" src="assets/img/horses/one.jpg" alt="Horses"/>
                         </div>
                     </div>
@@ -251,7 +252,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary mb-0">My Other Horses</h2>
+                                    <h2 class="portfolio-modal-title text-secondary mb-0">My Horses</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -332,10 +333,10 @@
                             training the volunteers, writing grants, admisistrative duties, fundraising. 
                             Along the way, I met some pretty special people and horses. 
                             Always wanting to learn, I attended many Path functions and was introduced to 
-                            Horsemanship with John Lyons, Centered Riding with Sally Swift, T-Touch by Linda Tellington Jones just to name a few.
+                            Horsemanship with John Lyons, Centered Riding with Sally Swift, T-Touch by Linda Tellington-Jones just to name a few.
                         </p>
                         <p>
-                            My riding education has been a blend of strict Classical Dressage as taught to me by Charles De Kunfy and numerous clinicians, 
+                            My riding education has been a blend of strict Classical Dressage as taught to me by Charles DeKunffy and numerous clinicians, 
                             and many versions of basic Horsemanship as taught by Tom Dorrance, Buck Brannaman, Pat Perelli, Ken McNab, John Lyons.  
                             I find they compliment each other very well, and as long as the wellfare of the horse stays a priority, I'm always learning.
                         </p>
@@ -372,6 +373,7 @@
                             Charles DeKunffy--classical dressage theory and praxis<br>
                             Dee Jannle--SET Method (Simple Equine Teaching)<br>
                             Mary Wannles--Rider Biomechanics<br>
+                            Elizabeth Poulin,
                             Patrick King, Pati Becker, Bent Jensen, Peter Grigoriev--Dressage<br>
                             Jake Biernbaum, Ryan Rose--Horsemanship<br>
                             Karen and Mike Boso at Karmick Acres--Working Equitation
@@ -380,7 +382,7 @@
                     <div class="col-lg-5 mr-auto">
                         <p class="lead">Audits: </p>
                             <ul class="list-group">   
-                            Walter Zetel, Conrad Schumacher, <br>
+                            Walter Zettl, Conrad Schumacher, <br>
                             Andreas Hausberger (Head of the Spanish Riding School), <br>
                             Stephen Peters, Jan Brink, Lendon Gray,<br>
                             Hilda Gurney--Dressage<br>
@@ -445,9 +447,6 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
         <!-- Third party plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-        <!-- Contact form JS-->
-        <script src="assets/mail/jqBootstrapValidation.js"></script>
-        <script src="assets/mail/contact_me.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
