--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 <div class="row">
                     <div class="col-lg-5 ml-auto lead">
                         <p>
-                            Since visiting Wellington, Flordia for the first time in the late 1980s, I became fascinated with the sport of Dressage.                           
+                            Since visiting Wellington, Florida for the first time in the late 1980s, I became fascinated with the sport of Dressage.                           
                             Which is, simply put, the training of the horse to use it's body under the rider in an optimal manor. 
                             I was so impressed by these amazing horses and riders doing these seemily effortless movements.
                         </p>
@@ -342,12 +342,12 @@
                         </p>
                     </div>
                     <div class="col-lg-5 mr-auto lead">
-                        <p>Saddle fit has been my nemisis, and a driving force in the quest to ride better. 
+                        <p>Saddle fit has been my nemesis, and a driving force in the quest to ride better. 
                             I took so many lessons over the years, but sometimes discomfort and lack of balance kept me from advancing. 
                             Sore knees, and bumm pushed me to search for balanced riding. 
                             I scraped the expensive custom made dressage saddles, and got a cheap jumping saddle. 
                             Low and behold, I finally found my balance. 
-                            I'm not a jumper, leave that to the younger folkes, but sometimes you have to think outside the box to find your way.              
+                            I'm not a jumper, leave that to the younger folks, but sometimes you have to think outside the box to find your way.              
                         </p><p>   
                             Then a couple of highly sensitive horses made sure I learned more about biomechanics and horse/human relationships. 
                             Riding effortlessly and in unison with your equine partner is a wonderful feeling. Every day we learn and grow. 
