--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                         <p>
                             Since visiting Wellington, Florida for the first time in the late 1980s, I became fascinated with the sport of Dressage.                           
                             Which is, simply put, the training of the horse to use it's body under the rider in an optimal manor. 
-                            I was so impressed by these amazing horses and riders doing these seemily effortless movements.
+                            I was so impressed by these amazing horses and riders doing these seemingly effortless movements.
                         </p>
                         <p> 
                             As I started riding, I volunteered at a therapeutic riding center, Kiwanis Horses and Handicapped, Inc. in Miami. 
@@ -330,22 +330,22 @@
                             working with both physical and mental disabilities. 
                             As I write this, my favorite saying comes to mind: "it's all about ability." 
                             I worked there for 16 years running the program, which included teaching the riders, 
-                            training the volunteers, writing grants, admisistrative duties, fundraising. 
+                            training the volunteers, writing grants, administrative duties, fundraising. 
                             Along the way, I met some pretty special people and horses. 
                             Always wanting to learn, I attended many Path functions and was introduced to 
                             Horsemanship with John Lyons, Centered Riding with Sally Swift, T-Touch by Linda Tellington-Jones just to name a few.
                         </p>
                         <p>
                             My riding education has been a blend of strict Classical Dressage as taught to me by Charles DeKunffy and numerous clinicians, 
-                            and many versions of basic Horsemanship as taught by Tom Dorrance, Buck Brannaman, Pat Perelli, Ken McNab, John Lyons.  
-                            I find they compliment each other very well, and as long as the wellfare of the horse stays a priority, I'm always learning.
+                            and many versions of basic Horsemanship as taught by Tom Dorrance, Buck Brannaman, Pat Parelli, Ken McNab, John Lyons.  
+                            I find they complement each other very well, and as long as the welfare of the horse stays a priority, I'm always learning.
                         </p>
                     </div>
                     <div class="col-lg-5 mr-auto lead">
                         <p>Saddle fit has been my nemesis, and a driving force in the quest to ride better. 
                             I took so many lessons over the years, but sometimes discomfort and lack of balance kept me from advancing. 
-                            Sore knees, and bumm pushed me to search for balanced riding. 
-                            I scraped the expensive custom made dressage saddles, and got a cheap jumping saddle. 
+                            Sore knees and bumm pushed me to search for balanced riding. 
+                            I scraped the expensive custom-made dressage saddles, and got a cheap jumping saddle. 
                             Low and behold, I finally found my balance. 
                             I'm not a jumper, leave that to the younger folks, but sometimes you have to think outside the box to find your way.              
                         </p><p>   
@@ -353,16 +353,16 @@
                             Riding effortlessly and in unison with your equine partner is a wonderful feeling. Every day we learn and grow. 
                             I am deeply grateful to all of my instructors for teaching me to ride with feel.                          
                         </p><p>After Miami, we lived in the Chicago, IL area for 13 years. 
-                            There, I loved trail riding through the forrest preserves. 
+                            There, I loved trail riding through the forest preserves. 
                             It was also a wonderful place for attending or auditing riding clinics. 
                             From the Temple Lipizzaners and the head riders of the Spanish Riding School, 
-                            to Buck Brannamn, to Custom Camp with Jake Biernbaum and Ryan Rose, to Working Equitation Clinics, 
+                            to Buck Brannaman, to Custom Camp with Jake Biernbaum and Ryan Rose, to Working Equitation Clinics, 
                             the horses and I traveled to Wisconsin, Minnesota, Michigan, and all around Illinois. 
                             We also competed up to second level dressage at many local horseshows.                          
                         </p><p>
                             My husband and I moved to Browns Valley, CA end of 2018. 
-                            Here I hope to pass on some of my knowledge to others, to make their riding quest simpler and sucessful. 
-                            The horse is a beautiful teacher, if one knows how to listen.
+                            Here I hope to pass on some of my knowledge to others, to make their riding quest simpler and successful. 
+                            The horse is a beautiful teacher if one knows how to listen.
                         </p>
                     </div>
                 </div>
