--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">PORTFOLIO</a>
                         </li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#services">SERVICES</a>
+                        </li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">ABOUT</a>
                         </li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">CONTACT</a>
@@ -32,9 +34,9 @@
                 </div>
             </div>
         </nav>
-        <header class="masthead bg-primary text-white text-center">
+        <header class="masthead-mine bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image--><img class="masthead-avatar-mine mb-5 rounded" src="assets/img/title.jpg" alt="Jackie Ege">
+                <!-- Masthead Avatar Image--><img class="masthead-avatar-mine mb-1 rounded" src="assets/img/title.jpg" alt="Jackie Ege">
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading mb-0">Learn to ride, </h1>
                 <h1 class="masthead-heading mb-0"> or learn to ride better</h1>
@@ -45,7 +47,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">
+                <p class="masthead-subheading lead mb-0">
                     If you have a horse, a place to ride and are looking to grow your equine relationship this might be for you.
                     Want to ride smarter, not harder? Are you looking for a better connection with your horse?
                     Let me help. English balanced riding lessons based on good biomechanics. 
@@ -303,6 +305,24 @@
                 </div>
             </div>
         </div>
+        <section class="page-section bg-secondary text-white mb-0" id="services">
+            <div class="container">
+                <!-- Services Section Heading-->
+                <div class="text-center">
+                    <h2 class="page-section-heading d-inline-block text-white">SERVICES</h2>
+                </div>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- Services Section Content-->
+                <div class="container text-center">
+                    <p class="lead mb-0">Make an appointment to ride with me!</p> 
+                </div>
+            </div>
+        </section>
         <section class="page-section bg-primary text-white mb-0" id="about">
             <div class="container">
                 <!-- About Section Heading-->
