--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
         <header class="masthead-mine bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image--><img class="masthead-avatar-mine mb-1 rounded" src="assets/img/title.jpg" alt="Jackie Ege">
+                <!-- Masthead Avatar Image--><img class="masthead-avatar-mine mb-2 rounded" src="assets/img/title.jpg" alt="Jackie Ege">
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading mb-0">Learn to ride, </h1>
                 <h1 class="masthead-heading mb-0"> or learn to ride better</h1>
@@ -47,12 +47,13 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading lead mb-0">
+                <p class="masthead-subheading lead mb-3">
                     If you have a horse, a place to ride and are looking to grow your equine relationship this might be for you.
                     Want to ride smarter, not harder? Are you looking for a better connection with your horse?
-                    Let me help. English balanced riding lessons based on good biomechanics. 
+                    Let me help. English, balanced riding lessons based on good biomechanics. 
                     You can be a Western rider or an English rider, it's all horse to me.
                     Feel secure while you ride, and do so effortlessly.</p>
+                <p class="masthead-subheading lead mb-0" style='color:purple;font-size:x-large'>The horse is a beautiful teacher, if one knows how to listen.</p>
             </div>
         </header>
         <section class="page-section portfolio" id="portfolio">
@@ -126,13 +127,16 @@
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <p class="mb-5">Enjoy these pictures</p>
+                                    <p class="mb-5">Valentina. Wellington, FL</p>
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/dressage/one.jpg" alt="Dressage Photo"/>
                                     <img class="img-fluid rounded mb-5" src="assets/img/dressage/two.jpg" alt="Dressage Photo"/>
+                                    <p class="mb-5">Lacy at Lamplight. Chicago, IL</p>
                                     <img class="img-fluid rounded mb-5" src="assets/img/dressage/three.jpg" alt="Dressage Photo"/>
                                     <img class="img-fluid rounded mb-5" src="assets/img/dressage/four.jpg" alt="Dressage Photo"/>
+                                    <p class="mb-5">Our mentor Charles DeKunffy, Albion College, MI</p>
                                     <img class="img-fluid rounded mb-5" src="assets/img/dressage/five.jpg" alt="Dressage Photo"/>
+                                    <p class="mb-5">Training with Bent Jensen. Chicago, IL</p>
                                     <img class="img-fluid rounded mb-5" src="assets/img/dressage/six.jpg" width=900 alt="Dressage Photo"/>
                                     <img class="img-fluid rounded mb-5" src="assets/img/dressage/seven.jpg" width=900 alt="Dressage Photo"/>
                                     <img class="img-fluid rounded mb-5" src="assets/img/dressage/eight.jpg" width=900 alt="Dressage Photo"/>
@@ -164,11 +168,12 @@
                                     </div>
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/horsemanship/one.jpg" alt="Photo"/>
+                                    <p class="mb-5">Custom Camp with Jake Biernbaum and Ryan Rose. Horse First Farm, WI</p>
                                     <img class="img-fluid rounded mb-5" src="assets/img/horsemanship/two.jpg" alt="Photo"/>
                                     <img class="img-fluid rounded mb-5" src="assets/img/horsemanship/three.jpg" alt="Photo"/>
                                     <img class="img-fluid rounded mb-5" src="assets/img/horsemanship/four.jpg" alt="Photo"/>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5">Play day with Deb Roetzer. Hampshire, IL</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
@@ -195,6 +200,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/working_equitation/one.jpg" alt="Photo"/>
+                                    <p class="mb-5">Working Equitation clinics at Karmic Acres. Woodstock, IL</p>
                                     <img class="img-fluid rounded mb-5" src="assets/img/working_equitation/two.jpg" alt="Photo"/>
                                     <img class="img-fluid rounded mb-5" src="assets/img/working_equitation/three.jpg" alt="Photo"/>
                                     <img class="img-fluid rounded mb-5" src="assets/img/working_equitation/four.jpg" alt="Photo"/>
@@ -202,7 +208,6 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/working_equitation/six.jpg" alt="Photo"/>
                                     <img class="img-fluid rounded mb-5" src="assets/img/working_equitation/seven.jpg" alt="Photo"/>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
@@ -234,9 +239,8 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/atticus/four.jpg" alt="Photo"/>
                                     <img class="img-fluid rounded mb-5" src="assets/img/atticus/five.jpg" alt="Photo"/>
                                     <img class="img-fluid rounded mb-5" src="assets/img/atticus/six.JPG" alt="Photo"/>
-                                    <img class="img-fluid rounded mb-5" src="assets/img/atticus/seven.jpg" alt="Photo"/>
+                                    <p class="mb-5">First days under saddle</p>                                    <img class="img-fluid rounded mb-5" src="assets/img/atticus/seven.jpg" alt="Photo"/>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
@@ -261,15 +265,17 @@
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
+                                    <p class="mb-5">Atticus, Lacy and Shrek back in Illinois</p>
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/horses/one.jpg" alt="Photo"/>
                                     <img class="img-fluid rounded mb-5" src="assets/img/horses/two.JPG" alt="Photo"/>
+                                    <p class="mb-5">Playing in the water. Barrington Forrest Preserve, IL</p>
                                     <img class="img-fluid rounded mb-5" src="assets/img/horses/three.JPG" alt="Photo"/>
                                     <img class="img-fluid rounded mb-5" src="assets/img/horses/four.JPG" alt="Photo"/>
                                     <img class="img-fluid rounded mb-5" src="assets/img/horses/five.jpg" alt="Photo"/>
                                     <img class="img-fluid rounded mb-5" src="assets/img/horses/six.jpg" alt="Photo"/>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5">Shrek (former Therapy pony) is always a good sport</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
@@ -319,7 +325,11 @@
                 </div>
                 <!-- Services Section Content-->
                 <div class="container text-center">
-                    <p class="lead mb-0">Make an appointment to ride with me!</p> 
+                    <p class="lead mb-3">Make an appointment to ride with me!</p>   
+                    <p class="lead mb-0">Private Riding Lesson (approx. 45 to 60 minutes): $50, &nbsp; 10 lessons: $450</p>
+                    <p class="lead mb-3">Group Lessons (2 to 4 persons) upon request: rate to be determined.</p>
+                    <p class="lead mb-3">Horse Training/Conditioning, Foundation/Groundwork, Riding/Schooling: rate to be determined</p>
+                    <p class="lead mb-0">Serving the Loma Rica to Penn Valley area, or anyplace not too far away.</p>
                 </div>
             </div>
         </section>
@@ -345,12 +355,14 @@
                         </p>
                         <p> 
                             As I started riding, I volunteered at a therapeutic riding center, Kiwanis Horses and Handicapped, Inc. in Miami. 
-                            At the time they were in desperate need of a certified therapeutic riding instructor. 
-                            So I learned what I needed to to become a Path International Advanced instructor (formerly NARHA), 
+                            At the time, they were in desperate need of a certified therapeutic riding instructor. 
+                            So I learned what I needed to, to become a Path International Advanced instructor (formerly NARHA), 
                             working with both physical and mental disabilities. 
-                            As I write this, my favorite saying comes to mind: "it's all about ability." 
-                            I worked there for 16 years running the program, which included teaching the riders, 
-                            training the volunteers, writing grants, administrative duties, fundraising. 
+                            As I write this, my favorite motto comes to mind: "<span style=color:purple>it's all about ability.</span>" 
+                         </p>
+                         <p>
+                            For 16 years, I ran the program, which included teaching riders, 
+                            training volunteers, writing grants, administrative duties, and fundraising. 
                             Along the way, I met some pretty special people and horses. 
                             Always wanting to learn, I attended many Path functions and was introduced to 
                             Horsemanship with John Lyons, Centered Riding with Sally Swift, T-Touch by Linda Tellington-Jones just to name a few.
@@ -358,7 +370,7 @@
                         <p>
                             My riding education has been a blend of strict Classical Dressage as taught to me by Charles DeKunffy and numerous clinicians, 
                             and many versions of basic Horsemanship as taught by Tom Dorrance, Buck Brannaman, Pat Parelli, Ken McNab, John Lyons.  
-                            I find they complement each other very well, and as long as the welfare of the horse stays a priority, I'm always learning.
+                            I find they complement each other very well, and as long as the welfare of the horse stays a priority.
                         </p>
                     </div>
                     <div class="col-lg-5 mr-auto lead">
@@ -381,11 +393,11 @@
                             We also competed up to second level dressage at many local horseshows.                          
                         </p><p>
                             My husband and I moved to Browns Valley, CA end of 2018. 
-                            Here I hope to pass on some of my knowledge to others, to make their riding quest simpler and successful. 
-                            The horse is a beautiful teacher if one knows how to listen.
+                            Here I hope to pass on some of my knowledge to others, to make their riding quest simpler and successful.                            
                         </p>
                     </div>
-                </div>
+                    
+                </div><p>&nbsp;</p>
                 <div class="row">
                     <div class="col-lg-5 ml-auto">
                         <p class="lead">Thank you to just a few of my teachers:</p>
@@ -394,7 +406,7 @@
                             Dee Jannle--SET Method (Simple Equine Teaching)<br>
                             Mary Wannles--Rider Biomechanics<br>
                             Elizabeth Poulin,
-                            Patrick King, Pati Becker, Bent Jensen, Peter Grigoriev--Dressage<br>
+                            Patrick King, Pati Becker, Bent Jensen, Peter Grigoriev, Jean Caswell--Dressage<br>
                             Jake Biernbaum, Ryan Rose--Horsemanship<br>
                             Karen and Mike Boso at Karmick Acres--Working Equitation
                         </ul>
