--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                         <p>
                             My riding education has been a blend of strict Classical Dressage as taught to me by Charles DeKunffy and numerous clinicians, 
                             and many versions of basic Horsemanship as taught by Tom Dorrance, Buck Brannaman, Pat Parelli, Ken McNab, John Lyons.  
-                            I find they complement each other very well, and as long as the welfare of the horse stays a priority.
+                            I find they complement each other very well, as long as the welfare of the horse stays a priority.
                         </p>
                     </div>
                     <div class="col-lg-5 mr-auto lead">
